@@ -1,7 +1,7 @@
 source 'https://rubygems.org'
 gemspec
 
-gem 'activesupport', '3.2.8'
-gem 'rails', '3.2.8'
+gem 'activesupport', '>= 3.2.8', '< 4'
+gem 'rails', '>= 3.2.8', '< 4'
 
 eval File.read(File.expand_path("../Gemfile_common", __FILE__))
