@@ -1,7 +1,7 @@
-source :rubygems
+source 'https://rubygems.org'
 gemspec
 
-gem 'activesupport', '3.0.17'
-gem 'rails', '3.0.17'
+gem 'activesupport', '>= 3.0.17', '< 3.1'
+gem 'rails', '>= 3.0.17', '< 3.1'
 
 eval File.read(File.expand_path("../Gemfile_common", __FILE__))
