@@ -1,7 +1,7 @@
-source :rubygems
+source 'https://rubygems.org'
 gemspec
 
-gem 'activesupport', '3.1.8'
-gem 'rails', '3.1.8'
+gem 'activesupport', '>= 3.1.8', '< 3.2'
+gem 'rails', '>= 3.1.8', '< 3.2'
 
 eval File.read(File.expand_path("../Gemfile_common", __FILE__))
