@@ -29,6 +29,7 @@
 * Barclays ePDQ: Handle incorrectly encoded response [jordanwheeler, aprofeit]
 * Orbital: Bug fixes; add CustomerEmail, Retry Logic, Managed Billing, and Destination Address [juicedM3
 * Distinguish invalid vs empty issue_numbers on CreditCards [drasch]
+* Float Gemfiles to latest Rails [sanemat]
 
 == Version 1.32.1 (April 4, 2013)
 
